--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,8 @@
 /workspace.xml
 /modules.xml
 /misc.xml
+/inspectionProfiles
+/vcs.xml
 # Editor-based HTTP Client requests
 /httpRequests/
 # Datasource local storage ignored files
