--- a/t3-react/tsconfig.json
+++ b/t3-react/tsconfig.json
@@ -1,5 +1,6 @@
 {
   "compilerOptions": {
+    "jsx": "react-jsx",
     "target": "es2016",                                  /* Set the JavaScript language version for emitted JavaScript and include compatible library declarations. */
     /* Modules */
     "module": "es6",                                     /* Specify what module code is generated. */
@@ -8,7 +9,11 @@
     /* Type Checking */
     "strict": true,                                      /* Enable all strict type-checking options. */
     "skipLibCheck": true,                                /* Skip type checking all .d.ts files. */
+    "outDir": "dist",                                    /* where to put transpiled ts files */
     "moduleResolution": "node",
-    "outDir": "./dist",
-  }
+  },
+//  "include": [
+//    "**/*.ts",
+//    "**/*.tsx"
+//  ]
 }
